<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_12sdp">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_currency"
        android:textSize="@dimen/_17sdp"
        android:textStyle="bold"
        android:paddingBottom="@dimen/_6sdp" />

    <EditText
        android:id="@+id/search_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_country_or_currency" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/currency_list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancel_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"

        android:layout_marginTop="@dimen/_6sdp" />
</LinearLayout>